syntax = "proto3";

package def.matching;

option java_package = "org.commelina.match24.play.matching.proto";
option java_outer_classname = "NotifyOpcodeProtos";
option java_multiple_files = true;

enum OPCODE {
    NOTIFY_MATCH_SUCCESS = 0;
    MATCH_STATUS = 1;
}